// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 134153,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 133950,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 284869,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 302608,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 313482,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 298544,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 234111,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 233908,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 267861,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 218696,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 368937,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 218456,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 347615,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 311797,
}
`;

exports[`System initialized: long with flip 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 350569,
}
`;

exports[`System initialized: sellCollateral 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 297493,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 290654,
}
`;

exports[`System initialized: short with flip 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 335932,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 182938,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 201767,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 253984,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 219662,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 254724,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 220262,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 395449,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 272640,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 387304,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 272112,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 301151,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 227800,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 283353,
}
`;

exports[`mc happens: long sellCollateral with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 227432,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 377780,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 412055,
}
`;

exports[`mc happens: sellCollateral with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 391314,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 346966,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 228,
  "gasUsed": 407816,
}
`;
